# Glue360-Library

./: .gitignore  CMakeLists.txt  CMakePresets.json  HOW_TO_USE.txt  LICENSE  README.md  build.bat  build_app.bat  build_clean.bat  create_standalone.bat
docs/: 03_codegen_automation.md  06_distribution.md  README.md
docs/design/: 01_architecture.md  02_patch_system.md  04_build_automation.md  05_ux_design.md  07_specification.md
gui/: INTEGRATION.md  index.html  package-lock.json  package.json  tsconfig.json
gui/src/: App.tsx  index.css
gui/src/components/: AddGameWizard.tsx  BackgroundFX.tsx  ConsoleStream.tsx  ControllerHints.tsx  FileBrowser.tsx  GameDetail.tsx  GameList.tsx  ImportCompiledGameDialog.tsx  QueueView.tsx  SystemView.tsx  TopBar.tsx  ui.tsx
gui/src/lib/: appData.ts  format.ts  helpers.ts  types.ts
gui/src/services/: recompService.ts
gui/src/store/: useStore.ts
patches/: manifest.toml
patches/games/415607E2/funcid/: rename_database.json
patches/games/415607E2/runtime/: xam-enum-pending.patch  xam-ui-headless.patch  xenumerator-success.patch
patches/shared/build-fixes/: cmake4x-module-scan.patch  libmspack-symlinks.patch  xxhash-cmake.patch
patches/shared/runtime/: queue-frames.patch  rov-barrier-skip.patch  spv-builder-accesschain.patch  thinlto.cmake
profiles/captain_america/: captain_america.toml.template  profile.toml  vtable_scan_2026-07-16.txt
profiles/captain_america/patches/game-runtime/xctd-compression-query/overlay/src/kernel/xboxkrnl/: xboxkrnl_io_info.cpp
profiles/captain_america/src/: captain_america_app.h  main.cpp  roundevenf.cpp
profiles/jurassic_hunted/: jurassic_hunted.toml.template  profile.toml
profiles/jurassic_hunted/src/: jurassic_hunted_app.h  main.cpp
profiles/spiderman3/: profile.toml  spiderman3.toml.template
profiles/spiderman3/src/: main.cpp  particle_perf.cpp  roundevenf.cpp  spiderman3_app.h  xmp_bypass.cpp
profiles/spiderman_wos/: profile.toml  spiderman_wos.toml.template
profiles/spiderman_wos/src/: main.cpp  roundevenf.cpp  spiderman_wos_app.h
src/: main.cpp
src/core/: istage.h  json_mini.cpp  json_mini.h  logger.cpp  logger.h  orchestrator.cpp  orchestrator.h  pipeline_context.cpp  pipeline_context.h  process_runner.cpp  process_runner.h  state_store.cpp  state_store.h  types.h
src/gui/: app.rc  gui_launcher.cpp  gui_launcher.h  gui_pipeline.cpp  gui_pipeline.h  webview_host.cpp  webview_host.h
src/iso/: stfs_reader.cpp  stfs_reader.h  title_update_downloader.cpp  title_update_downloader.h  xdvdfs_reader.cpp  xdvdfs_reader.h
src/profile/: game_profile.cpp  game_profile.h  template_renderer.cpp  template_renderer.h
src/stages/: deployer.cpp  deployer.h  game_builder.cpp  game_builder.h  iso_extractor.cpp  iso_extractor.h  patch_applier.cpp  patch_applier.h  rexglue_codegen.cpp  rexglue_codegen.h  rexglue_init.cpp  rexglue_init.h  runtime_builder.cpp  runtime_builder.h
